--- a/index.html
+++ b/index.html
@@ -1,10 +1,44 @@
 <!Doctype HTML>
 <html>
-    <title>ANKUR SINGHAL</title>
-    <head></head>
+    <title> ANKUR SINGHAL</title>
+    <head>
+        <script src="./node_modules/particles.js/particles.js"></script>
+        <script src="./app.js"></script>
+        <link rel="Stylesheet" src="http://www.jsdelivr.com/#!particles.js"> </link>
+    </head>
     <body>
-        <div>
+        <div id="particles-js">
+
+         <img src="./pic.img" alt="hello" > </img>
+         <div style="text-align:center">
             Hello it's me ankur!
+         </div>
+         <div style="text-align:center">
+            I am a delhi based tech enthusiast,amateur developer and a budding entrepreneur.
+            Hunger for innovation will make you love me...haha.Let's learn more about me!
+         </div>
         </div>
+        <script src="./stats.js"></script>
+        <script>
+  var count_particles, stats, update;
+  stats = new Stats;
+  stats.setMode(0);
+  stats.domElement.style.position = 'absolute';
+  stats.domElement.style.left = '0px';
+  stats.domElement.style.top = '0px';
+  document.body.appendChild(stats.domElement);
+  count_particles = document.querySelector('.js-count-particles');
+  update = function() {
+    stats.begin();
+    stats.end();
+    if (window.pJSDom[0].pJS.particles && window.pJSDom[0].pJS.particles.array) {
+      count_particles.innerText = window.pJSDom[0].pJS.particles.array.length;
+    }
+    requestAnimationFrame(update);
+  };
+  requestAnimationFrame(update);
+       </script>
+
+
     </body>
 </html>
